src/app/pages/logged-in/company/company-request-dashboard/company-request-dashboard.page.scss
#heading-pending-request {
    margin-top: 15px;
    margin-bottom: 16px;
}

.heading-request {
    font-size: 24px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: normal;
    letter-spacing: normal;
    text-align: left;
    color: #000;
    margin-top: 30px;
    margin-bottom: 22px;
}

ion-footer {
  box-shadow: 0 -4px 4px 0 rgba(0, 0, 0, 0.1);
  background-color: #ffffff;

  ion-button {
    height: 53px;
    width: calc(100% - 24px);
    font-size: 16px;
    font-weight: bold;
    font-stretch: normal;
    font-style: normal;
    line-height: 1.65;
    letter-spacing: normal;
    text-align: center;
    text-transform: none;
    margin: 12px 10px;
    --color: #ffffff;
    --border-radius: 5px;
    --background: #333333;
    --box-shadow: none;
  }
}

